small change in navbar structure and style
changed the way the body has it's margin, made the center nav buttons hoverable while adding styling to it

--- a/index.html
+++ b/index.html
@@ -1,90 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>WORKSHOP EMPREENDEDORISMO | PROJETO EXTENSÃO</title>
-		<link rel="stylesheet" href="style.css" />
-		<link rel="stylesheet" href="./globalStyle.css" />
-	</head>
-	<body>
-		<div class="wrapper">
-			<header>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>WORKSHOP EMPREENDEDORISMO | PROJETO EXTENSÃO</title>
+	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="./globalStyle.css" />
+</head>
+
+<body>
+	<header>
+		<p>
+			WorkShop <br />
+			<strong>Empreendedorismo</strong>
+		</p>
+
+		<ul>
+			<li id="about-btn"><a href="./sobre.html">SOBRE</a></li>
+			<li id="home-btn"><a href="#">HOME</a></li>
+			<li id="contact-btn"><a href="./contato.html">CONTATO</a></li>
+		</ul>
+
+		<button class="btn-register">REGISTRE-SE</button>
+	</header>
+
+	<div class="wrapper">
+		<main>
+			<section class="section1">
 				<p>
-					WorkShop <br />
-					<strong>Empreendedorismo</strong>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore
+					alias praesentium in, eligendi explicabo, neque rem cumque ea
+					consequuntur molestiae voluptates veniam quod! Consequuntur deleniti
+					modi minus soluta labore autem nobis quod nihil accusamus sapiente,
+					blanditiis, harum eius placeat, assumenda nostrum error recusandae.
+					Accusamus nulla saepe repudiandae nam laudantium assumenda eum. A
+					obcaecati aperiam, accusamus sapiente praesentium amet id
+					necessitatibus esse maxime consectetur! Cumque explicabo obcaecati
+					praesentium eos dolor illo error aliquid sunt ex dicta debitis
+					nihil, accusantium enim aspernatur voluptatum itaque eligendi
+					sapiente perspiciatis velit, libero dolorem! Consequatur esse
+					quibusdam nostrum fugiat ducimus dolorem repellat a neque, quisquam
+					amet.
 				</p>
 
+				<img src="./assets/tipos-de-empreendedorismo.webp" class="img-section1" />
+			</section>
+
+			<section class="section2">
+				<img src="./assets/workshop-1345512_1280-1024x682.jpg" class="img-section2" />
+
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Voluptatibus maxime libero eius mollitia sequi adipisci atque
+					facilis consequuntur. Soluta sed quos atque dicta voluptas tempora
+					vero exercitationem! Ea sed provident corrupti distinctio harum amet
+					ducimus tempore asperiores. Magnam nulla voluptas tempore cum
+					quibusdam iste nemo rerum quam ipsum eveniet omnis ad dolore earum
+					ea eligendi atque, molestiae laudantium harum, dolores quaerat
+					nostrum! Sed corrupti nostrum adipisci maxime harum, voluptate
+					voluptatem?
+				</p>
+			</section>
+		</main>
+
+		<footer>
+			<small>Direitos reservados...</small>
+			<nav>
 				<ul>
-					<li><a href="#">HOME</a></li>
-					<li><a href="./sobre.html">SOBRE</a></li>
-					<li><a href="./contato.html">CONTATO</a></li>
+					<li>
+						<a href="#"><img src="./assets/001-tiktok.png" alt="" srcset="" /></a>
+					</li>
+					<li>
+						<a href="#"><img src="./assets/002-instagram.png" alt="" srcset="" /></a>
+					</li>
 				</ul>
+			</nav>
+		</footer>
+	</div>
+</body>
 
-				<button class="btn-register">REGISTRE-SE</button>
-			</header>
-
-			<main>
-				<section class="section1">
-					<p>
-						Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore
-						alias praesentium in, eligendi explicabo, neque rem cumque ea
-						consequuntur molestiae voluptates veniam quod! Consequuntur deleniti
-						modi minus soluta labore autem nobis quod nihil accusamus sapiente,
-						blanditiis, harum eius placeat, assumenda nostrum error recusandae.
-						Accusamus nulla saepe repudiandae nam laudantium assumenda eum. A
-						obcaecati aperiam, accusamus sapiente praesentium amet id
-						necessitatibus esse maxime consectetur! Cumque explicabo obcaecati
-						praesentium eos dolor illo error aliquid sunt ex dicta debitis
-						nihil, accusantium enim aspernatur voluptatum itaque eligendi
-						sapiente perspiciatis velit, libero dolorem! Consequatur esse
-						quibusdam nostrum fugiat ducimus dolorem repellat a neque, quisquam
-						amet.
-					</p>
-
-					<img
-						src="./assets/tipos-de-empreendedorismo.webp"
-						class="img-section1"
-					/>
-				</section>
-
-				<section class="section2">
-					<img
-						src="./assets/workshop-1345512_1280-1024x682.jpg"
-						class="img-section2"
-					/>
-
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit.
-						Voluptatibus maxime libero eius mollitia sequi adipisci atque
-						facilis consequuntur. Soluta sed quos atque dicta voluptas tempora
-						vero exercitationem! Ea sed provident corrupti distinctio harum amet
-						ducimus tempore asperiores. Magnam nulla voluptas tempore cum
-						quibusdam iste nemo rerum quam ipsum eveniet omnis ad dolore earum
-						ea eligendi atque, molestiae laudantium harum, dolores quaerat
-						nostrum! Sed corrupti nostrum adipisci maxime harum, voluptate
-						voluptatem?
-					</p>
-				</section>
-			</main>
-
-			<footer>
-				<small>Direitos reservados...</small>
-				<nav>
-					<ul>
-						<li>
-							<a href="#"
-								><img src="./assets/001-tiktok.png" alt="" srcset=""
-							/></a>
-						</li>
-						<li>
-							<a href="#"
-								><img src="./assets/002-instagram.png" alt="" srcset=""
-							/></a>
-						</li>
-					</ul>
-				</nav>
-			</footer>
-		</div>
-	</body>
 </html>
