--- a/contato.html
+++ b/contato.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
-		<link rel="stylesheet" href="./globalStyle.css" />
-	</head>
-	<body>
-		<div class="wrapper">
-			<header>
-				<p>
-					WorkShop <br />
-					<strong>Empreendedorismo</strong>
-				</p>
 
-				<ul>
-					<li><a href="./index.html">HOME</a></li>
-					<li><a href="./sobre.html">SOBRE</a></li>
-					<li><a href="#">CONTATO</a></li>
-				</ul>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Document</title>
+	<link rel="stylesheet" href="./globalStyle.css" />
+</head>
 
-				<button class="btn-register">REGISTRE-SE</button>
-			</header>
-		</div>
-	</body>
+<body>
+	<header>
+		<p>
+			WorkShop <br />
+			<strong>Empreendedorismo</strong>
+		</p>
+
+		<ul>
+			<li id="about-btn"><a href="./sobre.html">SOBRE</a></li>
+			<li id="home-btn"><a href="./index.html">HOME</a></li>
+			<li id="contact-btn"><a href="./contato.html">CONTATO</a></li>
+		</ul>
+
+		<button class="btn-register">REGISTRE-SE</button>
+	</header>
+	<div class="wrapper">
+	</div>
+</body>
+
 </html>
